# llm-rag-zmq-pipe

./: .dockerignore  .env.example  .gitignore  Dockerfile  IMPLEMENTATION_GUIDE_MEMORY_DETOX.md  NEXT_SESSION.md  NODES_CODE_REVIEW.md  README.md  docker-build.sh  docker-compose.yml  docker-run.sh  example_config.json  main.py  pyproject.toml  setup.sh  status.md
.clinerules/: 1-styleguide.md
docs/: ADVISOR_PATTERN_CONCEPT.md  ANALYSIS_MEMORY_DECAY_AND_DETOX.md  BRAINSTORMING.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_PROGRESS.md  MEMORY_DECAY_ALGORITHM.md  NODE_META_FEEDBACK.md  ORCHESTRATOR.md  PROJECT_VISION.md  PSYCHOLOGY.md  TESTING.md  UNIFIED_THINKING_ARCHITECTURE.md
docs/algorithms/: DETOX_PROTOCOL.md
examples/: README.md  basic_client.py  conversation_demo.py  dialogue_client.py  rag_retrieval_demo.py  sentiment_aware_client.py  test_pipeline.py
plans/: styleguide_compliance_issues.md  unnecessary_backward_compatibility.md
src/: __init__.py  bootstrap.py  cli.py  orchestrator.py
src/chrono/: __init__.py  task_scheduler.py
src/communication/: __init__.py  zmq_connection_manager.py  zmq_handler.py
src/config/: __init__.py  defaults.py  loader.py  settings.py
src/handlers/: __init__.py  context_interpreter.py  emotional_state.py  format_advisor.py  handler_registry_decorator.py  memory_advisor.py  memory_evaluation.py  memory_retrieval.py  needs_advisor.py  needs_analysis.py  primary_response.py  response_strategy.py  sentiment_analysis.py  strategy_advisor.py  user_fact_extraction.py
tests/: __init__.py  conftest.py  test_algo_nodes.py  test_config_loader.py  test_decision_engine.py  test_integration_config.py  test_models_sentiment.py  test_nodes_phase1.py  test_rag_algorithms.py  test_storage_conversation_store.py
(+106 files in other folders)
